--- a/sass/styles.css
+++ b/sass/styles.css
@@ -463,8 +463,7 @@ body {
   flex: 1;
 }
 .profile-info .avatar {
-  width: 36px;
-  height: 36px;
+  padding: 10px;
   background: #fbbf24;
   color: #ffffff;
   border-radius: 50%;
